# MiniSCF

./: Cargo.toml  README.md  STO-3G.gbs  mo_0.cube  mo_1.cube
.github/workflows/: ci.yaml
bse_get/: Cargo.toml
bse_get/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
element/: Cargo.toml
element/src/: lib.rs
examples/: H2.xyz  HeH+.xyz  LiH.xyz  methane.xyz
internal_crd/: Cargo.toml
internal_crd/src/: main.rs
rhf_sim/: Cargo.toml
rhf_sim/src/: main.rs
scf_core/: Cargo.toml
scf_core/src/: lib.rs  point.rs
scf_sim/: Cargo.toml
scf_sim/src/: basis.rs  basis_reader.rs  cube_writer.rs  integrals.rs  lib.rs  main.rs  point.rs  primitive_gaussian.rs  sim.rs  utils.rs
src/: atom.rs  basis.rs  basis_reader.rs  cube_writer.rs  integrals.rs  linalg.rs  main.rs  matrix.rs  point.rs  sim.rs
xyz/: Cargo.toml
xyz/src/: lib.rs
