[workspace]
members = [
    "element",
    "scf_core",
    "xyz",
    "scf_sim",
    "internal_crd",
    "rhf_sim",
    "bse_get",
]
resolver = "3"

[profile.dev]
opt-level = 0
debug-assertions = true
incremental = true
panic = "unwind"
debug = "full"

[profile.release]
opt-level = 3
debug-assertions = false
incremental = false
panic = "abort"
debug = "none"

[workspace.lints.clippy]
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
