[package]
name = "scf_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
scf_core = { path = "../scf_core" }
xyz = { path = "../xyz" }
clap = { version = "4.6.1", features = ["derive"] }
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas"] }
log = "0.4.33"
simple_logger = "5.2.0"

[dev-dependencies]
rand = { version = "0.10.1", features = ["chacha"] }
